# tcc-compiler

./: .gitignore  CMakeLists.txt  README.cn.md  README.en.md  README.md
include/parser/: Lexer.h  Parser.h  Syntax.h  SyntaxKind.h  SyntaxNode.h  Token.h  TokenKind.h  TriviaKind.h
include/unittests/: TestCaseGenerator.h
scripts/: Syntax.templ  SyntaxKind.templ  TokenKind.templ  TokenKind_impl.templ  TriviaKind.templ  TriviaKind_impl.templ  syntax_gen.py
source/driver/: driver.cpp
source/parser/: Lexer.cpp  Token.cpp  TokenKind.cpp  TriviaKind.cpp
source/unittests/parser/: TestLexer.cpp
